--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+a{
+  text-decoration: none;
+}
+
+a, a:visited, a:hover, a:active{
+  color: inherit;
+}
+
+button{
+  cursor: pointer;
+}
